--- a/pages/escuelas-centro.html
+++ b/pages/escuelas-centro.html
@@ -18,9 +18,9 @@
 		<nav class="navbar navbar-expand-lg">
 			<div class="container-fluid">
 				<div class="logo">
-					<img src="../assets/img/1141.png" alt="logo">
+					<img src="../assets/img/1141.png" alt="logo-Inspeccion">
 				</div>
-				<h2>Inspeccion Zona 1141</h2>
+				<h1>Inspeccion Zona 1141</h1>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
 					aria-label="Toggle navigation">
@@ -122,8 +122,8 @@
 			</figure>
 			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
 				<p class="textoFotoEscuela11">
-					Codigo de Inspección: 1141-14 Telefono: 0351 
-					Directora: Acuña, Cristina Año de Fundación: 19
+					Codigo de Inspección: 1141-14 Telefono: 0351 4343052
+					Directora: Acuña, Cristina Año de Fundación: 1959
 				</p>
 				<p>
 					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
@@ -151,8 +151,8 @@
 			</figure>
 			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
 				<p class="textoFotoEscuela13">
-					Codigo de Inspección: 1141-15 Telefono: 0351 
-					Directora: Viviana Gauchat  Año de Fundación: 19
+					Codigo de Inspección: 1141-15 Telefono: 0351 4343051
+					Directora: Viviana Gauchat Año de Fundación: 1981
 				</p>
 				<p>
 					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
@@ -164,9 +164,9 @@
 		</div>
 		<h3>Ubicación</h3>
 		<h4>
-			<p>Dirección: La Pampa 550 Barrio Güemes</p>
+			<p>Dirección: Clemente Zarraga y Fuencarral Barrio Bella Vista</p>
 		</h4>
-		<a href="https://goo.gl/maps/hGoLxkpnfLim9oAC6" target="_blank">Ver en GOOGLE MAPS</a>
+		<a href="https://goo.gl/maps/viVj9EYYiqNMvL9u8" target="_blank">Ver en GOOGLE MAPS</a>
 		<br><br>
 	</section>
 	<!-- inicio de footer -->
