--- a/pages/escuelas-oeste.html
+++ b/pages/escuelas-oeste.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Escuelas Zona Sur</title>
+	<title>Escuelas Zona Oeste</title>
 	<!-- CSS BOOTSTRAP -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -19,7 +19,7 @@
 				<div class="logo">
 					<img src="../assets/img/1141.png" alt="logo">
 				</div>
-				<h2>Inspeccion Zona 1141</h2>
+				<h1>Inspeccion Zona 1141</h1>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
 					aria-label="Toggle navigation">
@@ -53,57 +53,120 @@
 		</nav>
 	</header>
 	<section>
-		<article>
-			<h3>Escuela Gobernador Olmos</h3>
-			<div class="escuela31">
-				<div class="fotoEscuela31">
-					<img src="../assets/img/Escuela-Olmos.png" alt="img escuela-Olmos">
-				</div>
-				<div class="textoFotoEscuela31">
-					<p> Codigo de Inspección: 1141-31 Telefono: 0351 433
-						Directora: Da Pozzo, Sandra Año de Fundación: 19
-					</p>
-					<p> Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
-						Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
-						Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
-						expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
-					</p>
-
-				</div>
+		<div class="row">
+			<h3 class="text-center border border-info-subtle">
+				Escuela Gobernador Olmos
+			</h3>
+			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<img class="d-block w-100 escuela" src="../assets/img/Escuela-Olmos.png"
+					alt="img Escuela-Olmos">
+			</figure>
+			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<p class="textoFotoEscuela11">
+					Codigo de Inspección: 1141-31 Telefono: 0351 4343440
+					Directora: Da Pozzo, Sandra Año de Fundación: 1919
+				</p>
+				<p>
+					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
+					dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio
+					adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita
+					inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+				</p>
 			</div>
-			<h3>Ubicación</h3>
-			<h4>
-				<p>Dirección: Av. Fuerza Aerea 2832 Barrio Parque Capital</p>
-			</h4>
-			<a href="https://goo.gl/maps/GzZh55zT5sFjvRym9" target="_blank">Ver en GOOGLE MAPS</a>
-		</article>
+		</div>
+		<h3>Ubicación</h3>
+		<h4>
+			<p>Dirección: Av. Fuerza Aerea 2832 Barrio Parque Capital</p>
+		</h4>
+		<a href="https://goo.gl/maps/uso34spoEGuG2K5u6" target="_blank">Ver en GOOGLE MAPS</a>
+		<br><br>
 	</section>
-	<h3 class="divisor"></h3>
 	<section>
-		<article>
-			<h3>Escuela Aeronautica</h3>
-			<div class="escuela33">
-				<div class="fotoEscuela33">
-					<img src="../assets/img/Escuela-Aeronautica.png" alt="img escuela-Aeronautica">
-				</div>
-				<div class="textoFotoEscuela33">
-					<p> Codigo de Inspección: 1141-33 Telefono: 0351 434
-						Directora: Tevez, Claudia Año de Fundación: 19
-					</p>
-					<p> Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
-						Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
-						Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
-						expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
-					</p>
-
-				</div>
+		<div class="row">
+			<h3 class="text-center border border-info-subtle">
+				Escuela Aeronautica Argentina
+			</h3>
+			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<img class="d-block w-100 escuela" src="../assets/img/Escuela-Aeronautica.png"
+					alt="img Escuela-Aeronautica">
+			</figure>
+			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<p class="textoFotoEscuela13">
+					Codigo de Inspección: 1141-33 Telefono: 0351 4343092
+					Directora: Tevez, Claudia Año de Fundación: 1956
+				</p>
+				<p>
+					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
+					Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
+					Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
+					expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+				</p>
 			</div>
-			<h3>Ubicación</h3>
-			<h4>
-				<p>Dirección: Barrio Vicor</p>
-			</h4>
-			<a href="https://goo.gl/maps/GzZh55zT5sFjvRym9" target="_blank">Ver en GOOGLE MAPS</a>
-		</article>
+		</div>
+		<h3>Ubicación</h3>
+		<h4>
+			<p>Dirección: Esmeralda y Diaz de la Fuente Barrio Matienzo</p>
+		</h4>
+		<a href="https://goo.gl/maps/mfJMBqxLeykWdy5j6" target="_blank">Ver en GOOGLE MAPS</a>
+		<br><br>
+	</section>
+	<section>
+		<div class="row">
+			<h3 class="text-center border border-info-subtle">
+				Escuela Cadetes de la Fuerza Aerea
+			</h3>
+			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<img class="d-block w-100 escuela" src="../assets/img/Escuela-Cadetes.png"
+					alt="img Escuela-Cadetes">
+			</figure>
+			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<p class="textoFotoEscuela35">
+					Codigo de Inspección: 1141-35 Telefono: 0351  
+					Directora: Kazepis, Priscila Año de Fundación: 1974
+				</p>
+				<p>
+					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
+					dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio
+					adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita
+					inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+				</p>
+			</div>
+		</div>
+		<h3>Ubicación</h3>
+		<h4>
+			<p>Dirección: Leopoldo Casavega 2320 Barrio Villa Adela</p>
+		</h4>
+		<a href="https://goo.gl/maps/McEk4VkpgFZaVNK99" target="_blank">Ver en GOOGLE MAPS</a>
+		<br><br>
+	</section>
+	<section>
+		<div class="row">
+			<h3 class="text-center border border-info-subtle">
+				Escuela Republica Argentina
+			</h3>
+			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<img class="d-block w-100 escuela" src="../assets/img/Escuela- Republica Argentina.png"
+					alt="img Escuela-Republica Argentina">
+			</figure>
+			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<p class="textoFotoEscuela36">
+					Codigo de Inspección: 1141-36 Telefono: 0351 4343329
+					Directora: Quinteros, Silvia  Año de Fundación: 1954
+				</p>
+				<p>
+					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
+					Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
+					Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
+					expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+				</p>
+			</div>
+		</div>
+		<h3>Ubicación</h3>
+		<h4>
+			<p>Dirección: Rufino Varela Ortiz 2112 Barrio Ameghino Sur</p>
+		</h4>
+		<a href="https://goo.gl/maps/To9KeZoGstza8t8B8" target="_blank">Ver en GOOGLE MAPS</a>
+		<br><br>
 	</section>
 	<h3 class="divisor"></h3>
 
