--- a/pages/escuelas-sur.html
+++ b/pages/escuelas-sur.html
@@ -19,7 +19,7 @@
 				<div class="logo">
 					<img src="../assets/img/1141.png" alt="logo">
 				</div>
-				<h2>Inspeccion Zona 1141</h2>
+				<h1>Inspeccion Zona 1141</h1>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
 					aria-label="Toggle navigation">
@@ -53,57 +53,120 @@
 		</nav>
 	</header>
 	<section>
-		<article>
-			<h3>Escuela Manuel Belgrano</h3>
-			<div class="escuela21">
-				<div class="fotoEscuela21">
-					<img src="../assets/img/Escuela-Manuel Belgrano.png" alt="img escuela-Manuel Belgrano">
-				</div>
-				<div class="textoFotoEscuela21">
-					<p> Codigo de Inspección: 1141-21 Telefono: 0351 4343050
-						Directora: Ruiz, Virginia Año de Fundación: 1973
-					</p>
-					<p> Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
-						Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
-						Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
-						expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
-					</p>
-
-				</div>
+		<div class="row">
+			<h3 class="text-center border border-info-subtle">
+				Escuela Manuel Belgrano
+			</h3>
+			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<img class="d-block w-100 escuela" src="../assets/img/Escuela-Manuel Belgrano.png"
+					alt="img Escuela-Manuel Belgrano">
+			</figure>
+			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<p class="textoFotoEscuela21">
+					Codigo de Inspección: 1141-21 Telefono: 0351 4343050
+					Directora: Ruiz, Virginia Año de Fundación: 1973
+				</p>
+				<p>
+					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
+					dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio
+					adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita
+					inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+				</p>
 			</div>
-			<h3>Ubicación</h3>
-			<h4>
-				<p>Dirección: Suecia 2832 Barrio Parque Velez Sarsfield</p>
-			</h4>
-			<a href="https://goo.gl/maps/GzZh55zT5sFjvRym9" target="_blank">Ver en GOOGLE MAPS</a>
-		</article>
+		</div>
+		<h3>Ubicación</h3>
+		<h4>
+			<p>Dirección: Suecia 2832 Barrio Parque Velez Sarsfield</p>
+		</h4>
+		<a href="https://goo.gl/maps/bVd1UyL7Cnay1N3Q6" target="_blank">Ver en GOOGLE MAPS</a>
+		<br><br>
 	</section>
-	<h3 class="divisor"></h3>
 	<section>
-		<article>
-			<h3>Escuela Benito Soria</h3>
-			<div class="escuela22">
-				<div class="fotoEscuela22">
-					<img src="../assets/img/Escuela-Benito Soria.png" alt="img escuela-Benito Soria">
-				</div>
-				<div class="textoFotoEscuela22">
-					<p> Codigo de Inspección: 1141-22 Telefono: 0351 4343470
-						Directora: Zamora, Maria Fabiana Año de Fundación: 1972
-					</p>
-					<p> Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
-						Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
-						Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
-						expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
-					</p>
-
-				</div>
+		<div class="row">
+			<h3 class="text-center border border-info-subtle">
+				Escuela Dr. Benito Soria
+			</h3>
+			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<img class="d-block w-100 escuela" src="../assets/img/Escuela-Benito Soria.png"
+					alt="img Escuela-Benito Soria">
+			</figure>
+			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<p class="textoFotoEscuela22">
+					Codigo de Inspección: 1141-22 Telefono: 0351 4343470
+					Directora: Zamora, Maria Fabiana Año de Fundación: 1972
+				</p>
+				<p>
+					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
+					Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
+					Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
+					expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+				</p>
 			</div>
-			<h3>Ubicación</h3>
-			<h4>
-				<p>Dirección: Barrio Vicor</p>
-			</h4>
-			<a href="https://goo.gl/maps/GzZh55zT5sFjvRym9" target="_blank">Ver en GOOGLE MAPS</a>
-		</article>
+		</div>
+		<h3>Ubicación</h3>
+		<h4>
+			<p>Dirección: Barbados 3200 y Haití Barrio Vicor</p>
+		</h4>
+		<a href="https://goo.gl/maps/ihjJAuLCpZtNQXwLA" target="_blank">Ver en GOOGLE MAPS</a>
+		<br><br>
+	</section>
+	<section>
+		<div class="row">
+			<h3 class="text-center border border-info-subtle">
+				Escuela Prov. de Catamarca
+			</h3>
+			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<img class="d-block w-100 escuela" src="../assets/img/Escuela-Catamarca.jpg"
+					alt="img Escuela-Catamarca">
+			</figure>
+			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<p class="textoFotoEscuela24">
+					Codigo de Inspección: 1141-24 Telefono: 0351 4619768
+					Directora:  Año de Fundación: 1915
+				</p>
+				<p>
+					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
+					dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio
+					adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita
+					inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+				</p>
+			</div>
+		</div>
+		<h3>Ubicación</h3>
+		<h4>
+			<p>Dirección: Velez Sarsfield 3582 Barrio Las Flores</p>
+		</h4>
+		<a href="https://goo.gl/maps/jLLHs93NEoysRND39" target="_blank">Ver en GOOGLE MAPS</a>
+		<br><br>
+	</section>
+	<section>
+		<div class="row">
+			<h3 class="text-center border border-info-subtle">
+				Escuela Republica de Siria
+			</h3>
+			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<img class="d-block w-100 escuela" src="../assets/img/Escuela-Rep de Siria.jpg"
+					alt="img Escuela-Rep. de Siria">
+			</figure>
+			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<p class="textoFotoEscuela25">
+					Codigo de Inspección: 1141-25 Telefono: 0351 4344162
+					Directora:  Año de Fundación: 1973
+				</p>
+				<p>
+					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
+					Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
+					Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
+					expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+				</p>
+			</div>
+		</div>
+		<h3>Ubicación</h3>
+		<h4>
+			<p>Dirección: Traful 908 B° Parque Atlántica</p>
+		</h4>
+		<a href="https://goo.gl/maps/CEcyUo3JCjweCT2t7" target="_blank">Ver en GOOGLE MAPS</a>
+		<br><br>
 	</section>
 	<h3 class="divisor"></h3>
 
