--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="logo">
 					<img src="assets/img/1141.png" alt="logo">
 				</div>
-				<h2>Inspeccion Zona 1141</h2>
+				<h1>Inspeccion Zona 1141</h1>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
 					aria-label="Toggle navigation">
@@ -182,10 +182,10 @@
 				<p>1141-33 Aeronautica Argentina</p>
 			</div>
 			<div>
-				<p>1141-36 Republica Argentina</p>
+				<p>1141-35 Cadetes de la Fuerza Aerea</p>
 			</div>
 			<div>
-				<p>1141-37 Zavala Ortiz</p>
+				<p>1141-36 Republica Argentina</p>
 			</div>
 		</div>
 
