--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -18,9 +18,9 @@
 		<nav class="navbar navbar-expand-lg">
 			<div class="container-fluid">
 				<div class="logo">
-					<img src="../assets/img/1141.png" alt="logo">
+					<img src="../assets/img/1141.png" alt="logo inspección">
 				</div>
-				<h2>Inspeccion Zona 1141</h2>
+				<h1>Inspeccion Zona 1141</h1>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
 					aria-label="Toggle navigation">
