Mejoras Titulos y Colores

--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -85,9 +85,9 @@
 	<!-- FIN CAROUSEL -->
 	<section>
 		<div class="row">
-			<h3 class="text-center border border-info-subtle">
-				Ubicación Escuela Sede de Inspeccion
-			</h3>
+			<h2 class="text-center border border-info-subtle">
+				Ubicación Escuela Sede de Inspección
+			</h2>
 			<figure class="col-xl-6 col-md-12 col-sm-12">
 				<img class="d-block w-100 img-ubic" src="../assets/img/escuela.jpg" alt="escuelasede">
 			</figure>
