--- a/pages/escuelas-sur.html
+++ b/pages/escuelas-sur.html
@@ -54,9 +54,9 @@
 	</header>
 	<section>
 		<div class="row">
-			<h3 class="text-center border border-info-subtle">
+			<h2 class="text-center border border-info-subtle">
 				Escuela Manuel Belgrano
-			</h3>
+			</h2>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
 				<img class="d-block w-100 escuela" src="../assets/img/Escuela-Manuel Belgrano.png"
 					alt="img Escuela-Manuel Belgrano">
@@ -83,9 +83,9 @@
 	</section>
 	<section>
 		<div class="row">
-			<h3 class="text-center border border-info-subtle">
+			<h2 class="text-center border border-info-subtle">
 				Escuela Dr. Benito Soria
-			</h3>
+			</h2>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
 				<img class="d-block w-100 escuela" src="../assets/img/Escuela-Benito Soria.png"
 					alt="img Escuela-Benito Soria">
@@ -112,9 +112,9 @@
 	</section>
 	<section>
 		<div class="row">
-			<h3 class="text-center border border-info-subtle">
+			<h2 class="text-center border border-info-subtle">
 				Escuela Prov. de Catamarca
-			</h3>
+			</h2>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
 				<img class="d-block w-100 escuela" src="../assets/img/Escuela-Catamarca.jpg"
 					alt="img Escuela-Catamarca">
@@ -122,7 +122,7 @@
 			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
 				<p class="textoFotoEscuela24">
 					Codigo de Inspección: 1141-24 Telefono: 0351 4619768
-					Directora:  Año de Fundación: 1915
+					Directora: Mirta Matinez Año de Fundación: 1915
 				</p>
 				<p>
 					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
@@ -141,9 +141,9 @@
 	</section>
 	<section>
 		<div class="row">
-			<h3 class="text-center border border-info-subtle">
+			<h2 class="text-center border border-info-subtle">
 				Escuela Republica de Siria
-			</h3>
+			</h2>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
 				<img class="d-block w-100 escuela" src="../assets/img/Escuela-Rep de Siria.jpg"
 					alt="img Escuela-Rep. de Siria">
@@ -151,7 +151,7 @@
 			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
 				<p class="textoFotoEscuela25">
 					Codigo de Inspección: 1141-25 Telefono: 0351 4344162
-					Directora:  Año de Fundación: 1973
+					Directora: Marcela Garay Año de Fundación: 1973
 				</p>
 				<p>
 					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
