--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<!-- CSS BOOTSTRAP -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-	<!-- MI CSS -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+		<!-- MI CSS -->
 	<link rel="stylesheet" href="CSS/estilo.css">
 </head>
 
@@ -88,7 +89,7 @@
 
 	<section class="index2">
 		<div class="row">
-			<h2 class="text-center border border-info-subtle">
+			<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
 				Organigrama Ministerial
 			</h2>
 			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
@@ -100,7 +101,7 @@
 		</div>
 	</section>
 	<div>
-		<h2 class="text-center border border-info-subtle">
+		<h2 class="animate__animated animate__backInRight text-center border border-info-subtle">
 			Personal Administativo Zona 1141
 		</h2>
 	</div>
@@ -138,7 +139,7 @@
 		</div>
 	</section>
 	<div>
-		<h2 class="text-center border border-info-subtle">
+		<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
 			Escuelas
 		</h2>
 	</div>
