--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,8 @@
 	<!-- CSS BOOTSTRAP -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-	<!-- MI CSS -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+		<!-- MI CSS -->
 	<link rel="stylesheet" href="../CSS/estilo.css">
 </head>
 
@@ -55,7 +56,7 @@
 	</header>
 	<section>
 		<div class="row">
-			<h2 class="text-center border border-info-subtle">
+			<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
 				Escuela Sede de Inspección
 			</h2>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
