--- a/pages/escuelas-centro.html
+++ b/pages/escuelas-centro.html
@@ -9,7 +9,8 @@
 	<!-- CSS BOOTSTRAP -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-	<link rel="stylesheet" href="../CSS/estilo.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+		<link rel="stylesheet" href="../CSS/estilo.css">
 </head>
 
 <body class="container-fluid">
@@ -55,7 +56,7 @@
 	</header>
 	<section>
 		<div class="row">
-			<h2 class="text-center border border-info-subtle">
+			<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
 				Escuela Adolfo Saldias
 			</h2>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
@@ -84,7 +85,7 @@
 	</section>
 	<section>
 		<div class="row">
-			<h2 class="text-center border border-info-subtle">
+			<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
 				Escuela Estados Unidos
 			</h2>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
@@ -113,7 +114,7 @@
 	</section>
 	<section>
 		<div class="row">
-			<h2 class="text-center border border-info-subtle">
+			<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
 				Escuela Hugo Wast
 			</h3>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
@@ -142,7 +143,7 @@
 	</section>
 	<section>
 		<div class="row">
-			<h2 class="text-center border border-info-subtle">
+			<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
 				Escuela Vaz Ferreyra
 			</h2>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
