--- a/pages/escuelas-sur.html
+++ b/pages/escuelas-sur.html
@@ -9,7 +9,8 @@
 	<!-- CSS BOOTSTRAP -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-	<link rel="stylesheet" href="../CSS/estilo.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+		<link rel="stylesheet" href="../CSS/estilo.css">
 </head>
 <body class="container-fluid">
 	<!-- fila de logo + nav -->
@@ -54,7 +55,7 @@
 	</header>
 	<section>
 		<div class="row">
-			<h2 class="text-center border border-info-subtle">
+			<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
 				Escuela Manuel Belgrano
 			</h2>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
@@ -83,7 +84,7 @@
 	</section>
 	<section>
 		<div class="row">
-			<h2 class="text-center border border-info-subtle">
+			<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
 				Escuela Dr. Benito Soria
 			</h2>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
@@ -112,7 +113,7 @@
 	</section>
 	<section>
 		<div class="row">
-			<h2 class="text-center border border-info-subtle">
+			<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
 				Escuela Prov. de Catamarca
 			</h2>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
@@ -141,7 +142,7 @@
 	</section>
 	<section>
 		<div class="row">
-			<h2 class="text-center border border-info-subtle">
+			<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
 				Escuela Republica de Siria
 			</h2>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
