--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Pagina Informativa de la Zona de Inspección 1141 de Córdoba Capital, que contiene Información de las Escuelas a Cargo, Organigrama Ministerial, Datos del Personal, Ubicación y datos de Contacto, junto con los sitios de Interes para consulta">  
 	<link rel="shortcut icon" href="assets/img/1141.png">
 	<title>Inspección</title>
 	<!-- CSS BOOTSTRAP -->
