--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,12 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Pagina Informativa de la Zona de Inspección 1141 de Córdoba Capital, que contiene datos de Contacto, para cualquier consulta en relación a las Escuelas a Cargo, pedido de banco etc,.">  
 	<title>Contacto</title>
 	<!-- CSS BOOTSTRAP -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-		<!-- MI CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+	<!-- MI CSS -->
 	<link rel="stylesheet" href="../CSS/estilo.css">
 </head>
 
@@ -60,30 +61,24 @@
 				Escuela Sede de Inspección
 			</h2>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<br><br><br><br><br><br><br>
 				<img class="d-inline foto-contacto" src="../assets/img/escuela2.jpg" alt="img contacto">
 			</figure>
 			<!-- formulario de contacto -->
 			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
-				<h4>Formulario de Contacto</h4>
-				<form action="#">
-					<label for="">Dejanos Nombre y Apellido</label>
-					<input type="text" placeholder="Nombre y Apellido">
-					<br><br>
-					<label for="email">Dejanos tu email:
-						<input type="email" placeholder="aaa@gmail.com" name="email">
-					</label>
-					<br><br>
-					<label for="Deja tu Mensaje"> Deja tu Mensaje:<br>
-						<textarea placeholder="Ingrese su Mensaje"></textarea>
-					</label>
-					<br>
-					<input type="submit" value="ENVIAR">
-					<input type="reset" value="RESETEAR">
-				</form>
-				<br>
+				<div class="contenedor wow animate__bounceIn">
+					<h2>Formulario de Contacto</h2>
+					<input type="text" class="control" name="nombre" id="nombre" placeholder="Ingrese su nombre">
+					<input type="text" class="control" name="apellido" id="apellido" placeholder="Ingrese su apellido">
+					<input type="email" class="control" name="email" id="email" placeholder="Ingrese su email">
+					<input type="text" class="control" name="mensaje" id="mensaje" placeholder="Ingrese su mensaje">
+					<button class="boton">Enviar</button>
+					<button class="boton">Borrar</button>
+				</div>
 			</div>
 		</div>
 	</section>
+	<br><br><br><br><br><br><br><br>
 	<!-- cierre de form contacto -->
 	<!-- inicio de footer -->
 	<footer>
