--- a/pages/escuelas-oeste.html
+++ b/pages/escuelas-oeste.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Pagina Informativa de la Zona de Inspección 1141 de Córdoba Capital, que contiene Información de las Escuelas a Cargo, ubicadas en la zona cercana al centro-oeste, de la capital Cordobesa.">  
 	<title>Escuelas Zona Oeste</title>
 	<!-- CSS BOOTSTRAP -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
