--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Pagina Informativa de la Zona de Inspección 1141 de Córdoba Capital, que contiene Ubicación de la Escuela sede de Inspección y Mapa orientativo">  
 	<title>Ubicacion</title>
 	<!-- CSS BOOTSTRAP -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
