--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -63,13 +63,13 @@
 		<div class="carousel-inner">
 			<div class=" text-center carousel-item active">
 				<figure>
-					<img src="../assets/img/escuela.png" class="d-block w-100 imgCarousel" alt="...">
+					<img src="../assets/img/escuela.png" class="d-block w-100 imgCarousel" alt="escuela sede">
 					<figcaption>Escuela Sede de Inspección</figcaption>
 				</figure>
 			</div>
 			<div class="text-center carousel-item">
 				<figure>
-					<img src="../assets/img/escuela1.webp" class="d-block w-100 imgCarousel" alt="...">
+					<img src="../assets/img/escuela1.webp" class="d-block w-100 imgCarousel" alt="patio escuela">
 					<figcaption>Patio de Ingreso a la Escuela</figcaption>
 				</figure>
 			</div>
