--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
 		<div class="carousel-inner">
 			<div class="text-center carousel-item active">
 				<figure>
-					<img src="assets/img/escuela.png" class="d-block w-100 imgCarousel" alt="...">
+					<img src="assets/img/escuela.png" class="d-block w-100 imgCarousel" alt="Escuela Sede">
 					<figcaption>Escuela Sede de Inspección</figcaption>
 				</figure>
 			</div>
 			<div class="text-center carousel-item">
 				<figure>
-					<img src="assets/img/escuela1.webp" class="d-block w-100 imgCarousel" alt="...">
+					<img src="assets/img/escuela1.webp" class="d-block w-100 imgCarousel" alt="Escuela Sede interior">
 					<figcaption>Patio de Ingreso a la Escuela</figcaption>
 				</figure>
 			</div>
 			<div class="text-center carousel-item">
 				<figure>
-					<img src="assets/img/delia provinciale1.jpg" class="d-block w-100 imgCarousel" alt="...">
+					<img src="assets/img/delia provinciale1.jpg" class="d-block w-100 imgCarousel" alt="foto secretaria de educacion">
 					<figcaption>Discurso de la Secretaria de Educacion</figcaption>
 				</figure>
 			</div>
@@ -94,10 +94,10 @@
 				Organigrama Ministerial
 			</h2>
 			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img class="d-block w-100 org-a" src="assets/img/organigramaA.png" alt="Un gato">
+				<img class="d-block w-100 org-a" src="assets/img/organigramaA.png" alt="primer organigrama">
 			</figure>
 			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img class="d-block w-100 org-b" src="assets/img/organigramaB.png" alt="Un gato">
+				<img class="d-block w-100 org-b" src="assets/img/organigramaB.png" alt="segundo organigrama">
 			</figure>
 		</div>
 	</section>
