--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,7 +66,7 @@
 			</figure>
 			<!-- formulario de contacto -->
 			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
-				<div class="contenedor wow animate__bounceIn">
+				<div class="d-block contenedor wow animate__bounceIn">
 					<h2>Formulario de Contacto</h2>
 					<input type="text" class="control" name="nombre" id="nombre" placeholder="Ingrese su nombre">
 					<input type="text" class="control" name="apellido" id="apellido" placeholder="Ingrese su apellido">
