--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 				Organigrama Ministerial
 			</h2>
 			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img class="d-block w-100 org-a" src="assets/img/organigramaA.png" alt="primer organigrama">
+				<img class="d-inline w-100" src="assets/img/organigramaA.png" alt="primer organigrama">
 			</figure>
 			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img class="d-block w-100 org-b" src="assets/img/organigramaB.png" alt="segundo organigrama">
+				<img class="d-inline w-100" src="assets/img/organigramaB.png" alt="segundo organigrama">
 			</figure>
 		</div>
 	</section>
@@ -110,31 +110,31 @@
 		<div class="row">
 			<figure class="col-xl-2 col-md-4 col-sm-6 col-xs-6 text-center">
 				<img src="assets/img/Secretario 1141.jpg" alt="img secretario 1141">
-				<figcaption>Secretario Técnico</figcaption>
+				<figcaption>Secretario Técnico-Administrativo</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img src="assets/img/img.png" alt="img Secretaria">
+				<img src="assets/img/secretaria vicky.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img src="assets/img/img.png" alt="img Secretaria">
+				<img src="assets/img/secretaria sonia.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img src="assets/img/img.png" alt="img Secretaria">
+				<img src="assets/img/secretaria graciela.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img src="assets/img/img.png" alt="img Secretaria">
+				<img src="assets/img/secretaria nelly.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img src="assets/img/img.png" alt="img Secretaria">
+				<img src="assets/img/secretaria sandra.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 		</div>
