--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
 				Organigrama Ministerial
 			</h2>
 			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img class="d-inline w-100" src="assets/img/organigramaA.png" alt="primer organigrama">
+				<img class="d-block w-100" src="assets/img/organigramaA.png" alt="primer organigrama">
 			</figure>
 			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img class="d-inline w-100" src="assets/img/organigramaB.png" alt="segundo organigrama">
+				<img class="d-block w-100" src="assets/img/organigramaB.png" alt="segundo organigrama">
 			</figure>
 		</div>
 	</section>
 	<div>
 		<h2 class="animate__animated animate__backInRight text-center border border-info-subtle">
-			Personal Administativo Zona 1141
+			Personal Zona 1141
 		</h2>
 	</div>
 	<section class="index3">
