--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 				Organigrama Ministerial
 			</h2>
 			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img class="d-block w-100" src="assets/img/organigramaA.png" alt="primer organigrama">
+				<img class="d-block w-100 org-a" src="assets/img/organigramaA.png" alt="primer organigrama">
 			</figure>
 			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img class="d-block w-100" src="assets/img/organigramaB.png" alt="segundo organigrama">
+				<img class="d-block w-100 org-b" src="assets/img/organigramaB.png" alt="segundo organigrama">
 			</figure>
 		</div>
 	</section>
