--- a/index.html
+++ b/index.html
@@ -109,32 +109,32 @@
 	<section class="index3">
 		<div class="row">
 			<figure class="col-xl-2 col-md-4 col-sm-6 col-xs-6 text-center">
-				<img class="d-inline" src="assets/img/Secretario 1141.jpg" alt="img secretario 1141">
+				<img class="d-inline w-30" src="assets/img/Secretario 1141.jpg" alt="img secretario 1141">
 				<figcaption>Secretario Técnico-Administrativo</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img class="d-inline" src="assets/img/secretaria vicky.png" alt="img Secretaria">
+				<img class="d-inline w-30" src="assets/img/secretaria vicky.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img class="d-inline" src="assets/img/secretaria sonia.png" alt="img Secretaria">
+				<img class="d-inline w-30" src="assets/img/secretaria sonia.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6 text-center">
-				<img class="d-inline" src="assets/img/secretaria graciela.png" alt="img Secretaria">
+				<img class="d-inline w-30" src="assets/img/secretaria graciela.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img class="d-inline" src="assets/img/secretaria nelly.png" alt="img Secretaria">
+				<img class="d-inline w-30" src="assets/img/secretaria nelly.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img class="d-inline" src="assets/img/secretaria sandra.png" alt="img Secretaria">
+				<img class="d-inline w-30" src="assets/img/secretaria sandra.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 		</div>
