--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Pagina Informativa de la Zona de Inspección 1141 de Córdoba Capital, que contiene Información de las Escuelas a Cargo, Organigrama Ministerial, Datos del Personal, Ubicación y datos de Contacto, junto con los sitios de Interes para consulta">  
+	<meta name="description"
+		content="Pagina Informativa de la Zona de Inspección 1141 de Córdoba Capital, que contiene Información de las Escuelas a Cargo, Organigrama Ministerial, Datos del Personal, Ubicación y datos de Contacto, junto con los sitios de Interes para consulta">
 	<link rel="shortcut icon" href="assets/img/1141.png">
 	<title>Inspección</title>
 	<!-- CSS BOOTSTRAP -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-		<!-- MI CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+	<!-- MI CSS -->
 	<link rel="stylesheet" href="CSS/estilo.css">
 </head>
 
@@ -73,7 +74,8 @@
 			</div>
 			<div class="text-center carousel-item">
 				<figure>
-					<img src="assets/img/delia provinciale1.jpg" class="d-block w-100 imgCarousel" alt="foto secretaria de educacion">
+					<img src="assets/img/delia provinciale1.jpg" class="d-block w-100 imgCarousel"
+						alt="foto secretaria de educacion">
 					<figcaption>Discurso de la Secretaria de Educacion</figcaption>
 				</figure>
 			</div>
@@ -109,32 +111,32 @@
 	<section class="index3">
 		<div class="row">
 			<figure class="col-xl-2 col-md-4 col-sm-6 col-xs-6 text-right">
-				<img class="d-block" src="assets/img/Secretario 1141.jpg" alt="img secretario 1141">
+				<img class="d-block w-50" src="assets/img/Secretario 1141.jpg" alt="img secretario 1141">
 				<figcaption>Secretario Técnico-Administrativo</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-right">
-				<img class="d-block" src="assets/img/secretaria vicky.png" alt="img Secretaria">
+				<img class="d-block w-50" src="assets/img/secretaria vicky.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-right">
-				<img class="d-block" src="assets/img/secretaria sonia.png" alt="img Secretaria">
+				<img class="d-block w-50" src="assets/img/secretaria sonia.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6 text-right">
-				<img class="d-block" src="assets/img/secretaria graciela.png" alt="img Secretaria">
+				<img class="d-block w-50" src="assets/img/secretaria graciela.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-right">
-				<img class="d-block" src="assets/img/secretaria nelly.png" alt="img Secretaria">
+				<img class="d-block w-50" src="assets/img/secretaria nelly.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-right">
-				<img class="d-block" src="assets/img/secretaria sandra.png" alt="img Secretaria">
+				<img class="d-block w-50" src="assets/img/secretaria sandra.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 		</div>
