--- a/index.html
+++ b/index.html
@@ -114,27 +114,27 @@
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img src="assets/img/img.png" alt="img Secretaria">
+				<img src="assets/img/secretaria vicky.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img src="assets/img/img.png" alt="img Secretaria">
+				<img src="assets/img/secretaria sonia.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img src="assets/img/img.png" alt="img Secretaria">
+				<img src="assets/img/secretaria nelly.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img src="assets/img/img.png" alt="img Secretaria">
+				<img src="assets/img/secretaria graciela.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
-				<img src="assets/img/img.png" alt="img Secretaria">
+				<img src="assets/img/secretaria sandra.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 		</div>
