--- a/pages/escuelas-oeste.html
+++ b/pages/escuelas-oeste.html
@@ -127,10 +127,11 @@
 					Directora: Kazepis, Priscila Año de Fundación: 1974
 				</p>
 				<p>
-					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
-					dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio
-					adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita
-					inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+					Historia: Corre el año 1969 y el Barrio Villa Adela se hace sentir. 
+					Surge la necesidad de que los niños del lugar tengan su escuela propia y se alquila una casa en la calle Capitán Bustos; allí comienza a funcionar la que hoy es nuestra escuela con el nombre de “PADRES UNIDOS DE VILLA ADELA”.
+					Comienza a organizarse un operativo denominado “HERMANDAD”, cuyo lema fue: “CON LOS BRAZOS DE LOS SOLDADOS DE LA ESCUELA DE SUBOFICIALES DE AERONÁUTICA, LA COLABORACIÓN DE LOS VECINOS DE VILLA ADELA Y LA GENEROSIDAD DE LOS CORDOBESES ESTAMOS LEVANTANDO UNA ESCUELA”.
+					Civiles y militares, padres, vecinos y docentes se unen en un objetivo común, reunir fondos para hacer realidad el nuevo edificio ubicado en la calle Leopoldo Casavega 2320.
+					El 26 de septiembre de 1970 se inaugura el edificio con el nombre Aeronáutica Argentina, logrando su oficialización en el año 1974. En 1978 por un decreto provincial se cambia el nombre por el de “CADETES DE LA FUERZA AÉREA ARGENTINA”, siendo apadrinada por el Cuerpo de Cadetes de la Escuela de Aviación Militar.
 				</p>
 			</div>
 		</div>
