correccion animate index

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		</div>
 	</section>
 	<div>
-		<h2 class="animate__animated animate__backInRight text-center border border-info-subtle">
+		<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
 			Personal Zona 1141
 		</h2>
 	</div>
