--- a/index.html
+++ b/index.html
@@ -110,28 +110,28 @@
 	</div>
 	<section class="index3">
 		<div class="row">
-			<figure class="col-xl-2 col-md-4 col-sm-6 col-xs-6 text-center">
+			<figure class="col-xl-2 col-md-4 col-sm-4 text-center">
 				<img src="assets/img/Secretario 1141.jpg" alt="img secretario 1141">
 				<figcaption>Secretario Técnico-Administrativo</figcaption>
 			</figure> 
-			<figure class="col-xl-2 col-md-4 col-sm-6 col-xs-6  text-center">
+			<figure class="col-xl-2 col-md-4 col-sm-4 text-center">
 				<img src="assets/img/secretaria vicky.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
-			<figure class="col-xl-2 col-md-4 col-sm-6 col-xs-6 text-center">
+			<figure class="col-xl-2 col-md-4 col-sm-4 text-center">
 				<img src="assets/img/secretaria sonia.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
-			<figure class="col-xl-2 col-md-4 col-sm-6 col-xs-6 text-center">
+			<figure class="col-xl-2 col-md-4 col-sm-4 text-center">
 				<img src="assets/img/secretaria nelly.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
-			<figure class="col-xl-2 col-md-4 col-sm-6 col-xs-6 text-center">
+			<figure class="col-xl-2 col-md-4 col-sm-4 text-center">
 				<img src="assets/img/secretaria graciela.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
-			<figure class="col-xl-2 col-md-4 col-sm-6 col-xs-6  text-center">
+			<figure class="col-xl-2 col-md-4 col-sm-4 text-center">
 				<img src="assets/img/secretaria sandra.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
