--- a/index.html
+++ b/index.html
@@ -89,18 +89,66 @@
 			<span class="visually-hidden">Next</span>
 		</button>
 	</div>
-
 	<section class="index2">
+		<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
+			Organigrama Ministerial
+		</h2>
 		<div class="row">
-			<h2 class="animate__animated animate__backInLeft text-center border border-info-subtle">
-				Organigrama Ministerial
-			</h2>
-			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img class="d-block w-100 org-a" src="assets/img/organigramaA.png" alt="primer organigrama">
-			</figure>
-			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img class="d-block w-100 org-b" src="assets/img/organigramaB.png" alt="segundo organigrama">
-			</figure>
+				<div class="index21">
+					<h3 class="animate__animated animate__backInLeft text-center border border-info-subtle">
+						Ministro y Directoras
+					</h3>
+					<div class="column">
+						<figure class="col-xl-12 col-md-12 col-sm-12 col-12 text-center">
+							<img src="assets/img/Ministro.png" alt="img secretario 1141">
+							<figcaption>Ministro de Educación</figcaption>
+						</figure>
+						<figure class="col-xl-12 col-md-12 col-sm-12 col-12 text-center">
+							<img src="assets/img/Secretaria.png" alt="img Secretaria">
+							<figcaption>Secretaria de Educación</figcaption>
+						</figure>
+					</div>
+					<div class="row">
+						<figure class="col-xl-4 col-md-4 col-sm-4 col-6 text-center">
+							<img src="assets/img/Directora Nivel Inicial.png" alt="img secretario 1141">
+							<figcaption>Directora Nivel Inicial</figcaption>
+						</figure>
+						<figure class="col-xl-4 col-md-4 col-sm-4 col-6 text-center">
+							<img src="assets/img/Directora Nivel Primario.png" alt="img Secretaria">
+							<figcaption>Directora Nivel Primario</figcaption>
+						</figure>
+						<figure class="col-xl-4 col-md-4 col-sm-4 col-6 text-center">
+							<img src="assets/img/Directora Nivel Secundario.png" alt="img Secretaria">
+							<figcaption>Directora Nivel Secundario</figcaption>
+						</figure>
+					</div>
+				</div>
+				<div class="index22">
+					<h3 class="animate__animated animate__backInLeft text-center border border-info-subtle">
+						Inspectores
+					</h3>
+					<div class="column">
+						<figure class="col-xl-12 col-md-12 col-sm-12 col-12 text-center">
+							<img src="assets/img/img.png" alt="img secretario 1141">
+							<figcaption>Inspector General</figcaption>
+						</figure>
+						<figure class="col-xl-12 col-md-12 col-sm-12 col-12 text-center">
+							<img src="assets/img/Inspectora Region I.jpg" alt="img Secretaria">
+							<figcaption>Inspectora Region Capital</figcaption>
+						</figure>
+					</div>
+					<div class="row">
+						<figure class="col-xl-6 col-md-6 col-sm-6 col-6 text-center">
+							<img src="assets/img/Inspectora Zona 1141.jpg" alt="img secretario 1141">
+							<figcaption>Inspectora Zona 1141</figcaption>
+						</figure>
+						<figure class="col-xl-6 col-md-6 col-sm-6 col-6 text-center">
+							<img src="assets/img/Secretaria Zona 1141.jpg" alt="img Secretaria">
+							<figcaption>Secretaria Zona 1141</figcaption>
+						</figure>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 	<div>
@@ -113,7 +161,7 @@
 			<figure class="col-xl-2 col-md-4 col-sm-4 col-6 text-center">
 				<img src="assets/img/Secretario 1141.jpg" alt="img secretario 1141">
 				<figcaption>Secretario Técnico</figcaption>
-			</figure> 
+			</figure>
 			<figure class="col-xl-2 col-md-4 col-sm-4 col-6 text-center">
 				<img src="assets/img/secretaria vicky.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
