--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				</div>
 				<div class="index22">
 					<h3 class="animate__animated animate__backInLeft text-center border border-info-subtle">
-						Inspectores
+						Inspectores y Secretarias
 					</h3>
 					<div class="column">
 						<figure class="col-xl-12 col-md-12 col-sm-12 col-12 text-center">
@@ -148,7 +148,7 @@
 						</figure>
 					</div>
 				</div>
-			</div>
+			
 		</div>
 	</section>
 	<div>
