--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<div class="row">
 			<div class="index21 text-center">
 				<h3 class="animate__animated animate__backInLeft text-center border border-info-subtle">
-					Ministro y Directoras
+					Ministro y Directoras de Nivel
 				</h3>
 				<div class="column">
 					<figure class="mt-5 col-xl-12 col-md-12 col-sm-12 col-12 text-center">
@@ -109,23 +109,23 @@
 					</figure>
 				</div>
 				<div class="row">
-					<figure class="col-xl-4 col-md-4 col-sm-4 col-6 text-center">
+					<figure class="mb-5 col-xl-4 col-md-4 col-sm-4 col-4 text-center">
 						<img src="assets/img/Directora Nivel Inicial.png" alt="img secretario 1141">
-						<figcaption>Directora Nivel Inicial</figcaption>
+						<figcaption>Inicial</figcaption>
 					</figure>
-					<figure class="col-xl-4 col-md-4 col-sm-4 col-6 text-center">
+					<figure class="col-xl-4 col-md-4 col-sm-4 col-4 text-center">
 						<img src="assets/img/Directora Nivel Primario.png" alt="img Secretaria">
-						<figcaption>Directora Nivel Primario</figcaption>
+						<figcaption>Primario</figcaption>
 					</figure>
-					<figure class="col-xl-4 col-md-4 col-sm-4 col-6 text-center">
+					<figure class="col-xl-4 col-md-4 col-sm-4 col-4 text-center">
 						<img src="assets/img/Directora Nivel Secundario.png" alt="img Secretaria">
-						<figcaption>Directora Nivel Secundario</figcaption>
+						<figcaption>Secundario</figcaption>
 					</figure>
 				</div>
 			</div>
 			<div class="index22 text-center">
 				<h3 class="animate__animated animate__backInLeft text-center border border-info-subtle">
-					Inspectores y Secretarias
+					Inspectores y Secretarias Zonales
 				</h3>
 				<div class="column">
 					<figure class="mt-5 col-xl-12 col-md-12 col-sm-12 col-12 text-center">
@@ -138,13 +138,13 @@
 					</figure>
 				</div>
 				<div class="row">
-					<figure class="col-xl-6 col-md-6 col-sm-6 col-6 text-center">
+					<figure class="col-xl-6 col-md-6 col-sm-12 col-12 text-center">
 						<img src="assets/img/Inspectora Zona 1141.jpg" alt="img secretario 1141">
-						<figcaption>Inspectora Zona 1141</figcaption>
+						<figcaption>Inspectora Zonal</figcaption>
 					</figure>
-					<figure class="col-xl-6 col-md-6 col-sm-6 col-6 text-center">
+					<figure class="col-xl-6 col-md-6 col-sm-12 col-12 text-center">
 						<img src="assets/img/Secretaria Zona 1141.jpg" alt="img Secretaria">
-						<figcaption>Secretaria Zona 1141</figcaption>
+						<figcaption>Secretaria</figcaption>
 					</figure>
 				</div>
 			</div>
