--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				<div class="row">
 					<figure class="col-xl-6 col-md-6 col-sm-12 col-12 text-center">
 						<img src="assets/img/Inspectora Zona 1141.jpg" alt="img secretario 1141">
-						<figcaption>Inspectora Zonal</figcaption>
+						<figcaption>Inspectora</figcaption>
 					</figure>
 					<figure class="col-xl-6 col-md-6 col-sm-12 col-12 text-center">
 						<img src="assets/img/Secretaria Zona 1141.jpg" alt="img Secretaria">
